# AtlasPieVersion3

./: .gitignore  FEATURE_ACTIONS_GUIDE.md  HOW_TO_ADD_MENU_ITEMS.md  LICENSE  todos.md
.husky/: pre-commit  pre-push
autohotpie-tauri/: README.md  i18n-lint.json  index.html  overlay.html  package-lock.json  package.json  pie-overlay.html  pnpm-lock.yaml  setupTests.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
autohotpie-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test-log.txt  test_compilation.txt
autohotpie-tauri/src-tauri/capabilities/: default.json  pie-overlay.json
autohotpie-tauri/src-tauri/resources/localization/: en.json  ru.json
autohotpie-tauri/src-tauri/scripts/: test-with-webview2.ps1
autohotpie-tauri/src-tauri/src/: lib.rs  lib_final.rs  lib_old.rs  main.rs  minimal_test.rs  models.rs  storage.rs  test_compilation.rs  update_services_state.rs
autohotpie-tauri/src-tauri/src/backend/: mod.rs  unsupported.rs  windows.rs
autohotpie-tauri/src-tauri/src/commands/: actions.rs  autostart.rs  custom_commands.rs  hotkeys.rs  import_export.rs  init_v2.rs  linux_shortcut.rs  localization.rs  logs.rs  mod.rs  mod_old.rs  pie_overlay.rs  profiles.rs  radial_overlay.rs  settings.rs  system.rs  toggle.rs  update_state.rs  updates.rs  updates_state_fixed.rs  updates_state_v2.rs
autohotpie-tauri/src-tauri/src/domain/: action.rs  context.rs  context_rules.rs  custom_command.rs  mod.rs  pie_menu.rs  profile.rs  validation.rs
autohotpie-tauri/src-tauri/src/services/: action_events.rs  action_runner.rs  audit_log.rs  autostart.rs  connectivity.rs  import_export.rs  ipc.rs  localization.rs  macro_engine.rs  mod.rs  pie_overlay.rs  profile_router.rs  storage_guard.rs  system_status.rs  tray.rs  update_checker.rs  update_download.rs  update_installer.rs  window_info.rs
autohotpie-tauri/src-tauri/src/storage/: command_repository.rs  profile_repository.rs
autohotpie-tauri/src-tauri/src/storage/profile_repository/: tests.rs
autohotpie-tauri/src-tauri/tests/integration/: profile_backups.rs
logs_48968591464/: 0_Windows checks.txt  1_Linux checks.txt  2_macOS smoke checks.txt
logs_49766241650/: 0_build-macos.txt  1_build-linux.txt  2_build-windows.txt
logs_49766241660/: 0_Windows checks.txt  1_macOS smoke checks.txt  2_Linux checks.txt
new/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
radialmenu/src-tauri/: Cargo.toml  tauri.conf.json
radialmenu/src-tauri/src/: main.rs
(+829 files in other folders)
