[package]
name = "autohotpie-tauri"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autohotpie_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Enable Tauri tray icon APIs when building the app.
tray-icon = ["tauri/tray-icon"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json"] }

[dependencies]
# Keep Tauri minimal for tests; opt-in to tray via crate feature.
tauri = { version = "2", default-features = false, features = ["test", "wry", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.4"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net", "process"] }
time = { version = "0.3", features = ["macros", "formatting", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
notify = "6"
once_cell = "1"
parking_lot = "0.12"
base64 = "0.21"
pathdiff = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
] }


