[package]
name = "radial-menu-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
directories = "5.0"
shell-words = "1.1"
webbrowser = "0.8"
device_query = "1.1"

[dependencies.tauri]
version = "1.6"
features = ["dialog", "global-shortcut"]
